03-09 padding added to the comtent-wrap and margins of h2s set to zero. Also, the button which cross the border of the container, fixed by display: inline-block property.

--- a/css-portfolio/css/styles.css
+++ b/css-portfolio/css/styles.css
@@ -21,12 +21,16 @@ img {
 a {
   color: #FFE66D;
 }
+h2 {
+  margin: 0;
+}
 a:hover {
   text-decoration: none;
 }
 .content-wrap {
   width: 800px;
   margin: 0 auto;
+  padding: 60px 0;
 }
 /* Profile
 -----------------*/
@@ -51,6 +55,7 @@ header {
   text-decoration: none;
   padding: 8px;
   border-radius: 4px;
+  display: inline-block;
 }
 /* Work Experience
 -----------------*/
